charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srv-friendly-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - friendly-api.sayedsadeed.com
    secretName: srv-friendly-secret
  rules:
    - host: friendly-api.sayedsadeed.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: srv-friendly
                port: 
                  number: 80
